--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
+
 apply plugin: 'com.google.gms.google-services'
+
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
 
 android {
     compileSdkVersion 28
@@ -79,4 +83,5 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'com.google.android:flexbox:1.0.0'
 }
