--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //CardView
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
