--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:hardwareAccelerated="true"
             android:name=".application.FootApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
