--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
     //CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    implementation 'net.danlew:android.joda:2.10.1.2'
 }
