--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,5 +93,8 @@ dependencies {
     //CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    //Joda Time
     implementation 'net.danlew:android.joda:2.10.1.2'
+
+    implementation project(path: ":newsparser")
 }
