--- a/newsparser/build.gradle
+++ b/newsparser/build.gradle
@@ -1,8 +1,18 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jsoup:jsoup:1.11.3'
+
+    //Joda Time
+    implementation 'net.danlew:android.joda:2.10.1.2'
+    implementation 'junit:junit:4.12'
+
+    testImplementation 'joda-time:joda-time:2.10.1'
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+repositories {
+    mavenCentral()
+}
