Replace executors on coroutines in parser. Add ParseNewsWorker and schedule it every 20 minutes. Change news receiving.

--- a/newsparser/build.gradle
+++ b/newsparser/build.gradle
@@ -10,6 +10,10 @@ dependencies {
     implementation 'net.danlew:android.joda:2.10.1.2'
     implementation 'junit:junit:4.12'
 
+    //Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
+
     testImplementation 'joda-time:joda-time:2.10.1'
 }
 
